[package]
name = "zk-paillier"
version = "0.4.0"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.8.0"
digest = "0.8.1"
thiserror = "1"

[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4"
default-features = false

[dev-dependencies]
criterion = "0.3"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "all"
harness = false
