[package]
name = "zk-paillier"
version = "0.4.0"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.9.8"
digest = "0.9"
thiserror = "1"

[dependencies.curv-kzen]
version = "0.8"
default-features = false

[dependencies.paillier]
git = "https://github.com/tmpfs/rust-paillier"
package = "kzen-paillier"
branch = "curv-0.8"
#version = "0.4.1"
default-features = false

[dev-dependencies]
criterion = "0.3"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "all"
harness = false
